# Null-Log-Library

./: .gitignore  CMakeLists.txt  README.md
demo_src/: CMakeLists.txt  main.cxx
demo_src/main_window/: main_window.cxx  main_window.hxx
includes/: null_log.hxx
src/: CMakeLists.txt  null_log.cxx  null_log.hxx
src/null_log/: null_log.cxx  null_log.hxx  null_log_export.hxx
